@@ -295,6 +295,7 @@ Raphael Pierquin
 Ray Waldin
 Remie Bolte
 Richard Evans
+Richard Steele
 Rick Beton
 Robert Anderson
 Robert Clark
