@@ -1190,6 +1190,10 @@
     <last>Evans</last>
   </name>
   <name>
+    <first>Richard</first>
+    <last>Steele</last>
+  </name>
+  <name>
     <first>Rick</first>
     <last>Beton</last>
   </name>
